# Yo-Player

./: .gitignore  README.md  build.gradle.kts  common_library_config.gradle  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
libraries/common/: build.gradle
libraries/common/buildout/intermediates/incremental/mergeDebugAssets/: merger.xml
libraries/common/buildout/intermediates/incremental/mergeDebugJniLibFolders/: merger.xml
libraries/common/buildout/intermediates/incremental/mergeDebugShaders/: merger.xml
libraries/common/buildout/outputs/logs/: manifest-merger-debug-report.txt
libraries/container/: build.gradle
libraries/container/buildout/outputs/logs/: manifest-merger-debug-report.txt
libraries/database/: build.gradle
libraries/database/buildout/outputs/logs/: manifest-merger-debug-report.txt
libraries/datasource/: build.gradle
libraries/datasource/buildout/outputs/logs/: manifest-merger-debug-report.txt
libraries/decoder/: build.gradle
libraries/decoder/buildout/outputs/logs/: manifest-merger-debug-report.txt
libraries/decoder_ffmpeg/: build.gradle
libraries/exoplayer/: build.gradle
libraries/exoplayer/buildout/outputs/logs/: manifest-merger-debug-report.txt
libraries/extractor/: build.gradle
libraries/extractor/buildout/outputs/logs/: manifest-merger-debug-report.txt
yoplayersdk/: build.gradle.kts  consumer-rules.pro
yoplayersdk/src/main/jni/: CMakeLists.txt  build_ffmpeg.sh  ffmpeg_demuxer_jni.cc
yoplayersdk/src/main/jni/ffmpeg/: config.h  config_components.h
yoplayersdk/src/main/jni/ffmpeg/libavutil/: ffversion.h
(+1913 files in other folders)
